#214 refactor: BookUserCustomRepository.countByBookExclusively() 메서드 이름 변경